[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "three-qubit-tools"          # what you will `import`, NOT the folder
version = "0.1.0"
description = "Utilities for 3-qubit conditional probabilities"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "qiskit>=0.45",
    "matplotlib>=3.6",
    "numpy>=1.23"
]

[tool.setuptools.packages.find]
# Look for packages inside the `src` directory
where = ["src"]
include = ["*"]                     # grab any package under `src`

[project.scripts]
cond-prob = "src.utils.cond_probability:main"   # optional CLI